--- a/libft/Makefile
+++ b/libft/Makefile
@@ -13,8 +13,8 @@ SOURCES = ft_is_group.c \
 	ft_printf.c \
 	ft_printf_utils.c \
 	ft_bonus.c \
-	ft_bonus_2.c
-# 	get_next_line.c
+	ft_bonus_2.c \
+	get_next_line.c
 
 OBJECTS = $(SOURCES:.c=.o)
 
