add atoi base in libft

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,11 +1,13 @@
 NAME = libft.a
 
 SOURCES = ft_is_group.c \
+	ft_is_2.c \
 	ft_malloc_group.c \
 	ft_mem_group.c \
 	ft_put_group.c \
 	ft_split_group.c \
 	ft_split2.c \
+	ft_atoi_group.c \
 	ft_str_adv.c \
 	ft_str_basic.c \
 	ft_str_finder.c \
